--- a/Libraries/css/themekit/main-light.css
+++ b/Libraries/css/themekit/main-light.css
@@ -400,6 +400,13 @@ button.cyan.outlined:active {
   padding: 2rem 5vw;
 }
 
+.container.centered {
+  display: block;
+  margin: auto;
+  text-align: center;
+  padding: 0;
+}
+
 .divider {
   width: 70vw;
   height: 10px;
